# read-image-text

./: README.md  main.py  pyproject.toml
sample-data/: output.txt
utils/: ocr_engine.py  pdf_to_image.py  test.py
